# sandbox

./: README.md  _clang-format
blog/: config.toml
blog/content/posts/: blog-hugo-github.md
cmd/: start_another_cmd.bat
cpp/: .gitignore  CMakeLists.txt  _clang-format
cpp-sandbox/: cpp_sandbox_format.py  format-google.py  format-llvm.py  format-webkit.py
cpp-sandbox/format/: format-llvm.py
cpp-sandbox/sln/: .gitignore  cpp-sandbox.sln  cpp-sandbox.vcxproj  cpp-sandbox.vcxproj.filters
cpp-sandbox/src/: aggregate_initialization.cpp  algorithms.cpp  format_test.cpp  initializer_list.cpp  lamdas.cpp  main.cpp  move.cpp  override.cpp  range_loop.cpp  template.cpp  tuple.cpp  type_erasure.cpp  type_traits.cpp
cpp/boost/use-boost/: CMakeLists.txt  build.bat  use-boost.code-workspace
cpp/boost/use-boost-custom-config/: CMakeLists.txt  build.bat  main.cpp
cpp/cpp-sandbox/: .gitignore  CMakeLists.txt  make.py
cpp/cpp-sandbox/src/: aggregate_initialization.cpp  algorithms.cpp  crtp.cpp  enable_if.cpp  has_func.cpp  initializer_list.cpp  main.cpp  move.cpp  profile_idiv.cpp  range_loop.cpp  stringstream.cpp  template.cpp  type_erasure.cpp  type_traits.cpp
cpp/format/: cmd.cmd  cpp_sandbox_format.py  format-mozilla.py
cpp/scripts/: galdebert.cmake
cpp/sln/: .gitignore  cpp-sandbox.sln  cpp-sandbox.vcxproj  cpp-sandbox.vcxproj.filters
cpp/src/: aggregate_initialization.cpp  compare_vec3f.cpp  enable_if.cpp  format_test.cpp  has_func.cpp  lamdas.cpp  main.cpp  move.cpp  override.cpp  profile_idiv.cpp  range_loop.cpp  stringstream.cpp  tuple.cpp  type_erasure.cpp  type_name.h  type_traits.cpp
cpp/test-cmake/: CMakeLists.txt  build.bat  make.py  test-cmake.code-workspace
cpp/test-cmake/src/: main.cpp
cpp/test-cmake/src/private/: hello.h
cpp/zeromq/test_zmq/: CMakeLists.txt  (+4 more)
d-sandbox/ConsoleApp1/: ConsoleApp1.visualdproj  fundamentals.d  main.d
d-sandbox/app_1/: .gitignore  app_1.visualdproj
d/ConsoleApp1/: ConsoleApp1.sln  ConsoleApp1.visualdproj
d/app_1/: app_1.sln  app_1.visualdproj
doc/: Mithril-vs-Angular-vs-React.md  git-cheat-sheet.md  github-api-graphql.md  graphql.md  learnforge-notes.md  md-to-slides.md  node-install.md  totry.md
doc/boost/: install-boost-on-windows.md
doc/build-cpp/: conan.md
doc/cmake/: cmake-notes.md
doc/cmder/: cmder-vendor-git-vs-system-git.md  cmder.md
doc/git/: avoid-always-entering-git-credentials-without-ssh.md  avoid-always-entering-git-credentials.md  git-cheat-sheet.md  git-credential-manager-for-all-os.md  git-credential-manager-for-windows.md  how-to-upgrade-git-used-in-cmder.md  using-ssh-with-github.md  using-ssh-withgithub.md
doc/graphql/: more-graphql.md
doc/js-node/: libuv.md
doc/linux/: my-linux-cheatsheet.md  notes.md  set2560x1440  start_ssh  workaround-kubuntu-discover-freeze.md
doc/node/: npm-scripts.md  npm-yarn.md  npm.md  nvm.md  package-lock.md  typescript-and-npm.md  vscode-typescript.md
doc/python/: async-await.md
doc/unity/: evolution-of-programmable-models-for-graphics-engine.md
doc/visual-studio/: galdebert-vs-2015-keyboard-shortcuts.vssettings  galdebert-vs-2015.vssettings  galdebert-vs-2017-texteditor-cpp.vssettings  setup-visual-studio.md  vs-shortcut-cheat-sheet.md  vs-shortcut-cheat-sheet.txt
doc/vscode/: my-keyboard-shortcuts.md  vs-code-default-typescript-snippets.md
doc/windows/: most-important-windows10-how-tos.md  windows10-how-tos.md
emscripten/test/: .gitignore  README.md  hello.cpp
go-sandbox/: HelloWorld.go
html-css/: .gitignore  README.md  input.scss  mymixin.scss
javascript/js1/: .gitignore  browserify_test.html  browserify_test_bundle.bat  js1.njsproj  react_test.html  test.html  test.js
javascript/nodejs_1/: nodejs_1.sln
js/js1/: browserify_test.js  browserify_test_bundle.js  js1.njsproj  js1.sln  package.json  react_test.js  react_test_bundle.bat  react_test_bundle.js
js/promises/: test.js
python/: .gitignore  README.md  child_process_consume.py  child_process_produce.py  cmp_all_clang_format.py  copy_headers.py  format_all.py  generator.py  py_fmt_lint_this_dir.py  python-format  quick_file_rename.py  requirements.txt  slice.py  src.py  static_member.py  test.py  win10_lock_screens.py
python-sandbox/: python-sandbox.pyproj  python-sandbox.sln
python/old/: araxis_cmp.py  child_process_consume.py  cmp_all_clang_format.py  cmp_all_vscode_settings.py  copy_headers.py  generator.py  slice.py  static_member.py
python/scripts/: cmp_all_clang_format.py
python/snippets/: child_process_produce.py  static_member.py  test_disable_lint.py
python/test_rel_import/: main.py  module_top_a.py  module_top_b.py
python/utils/: utils.py
react/create-react-app-ts/: package.json
react/create-react-app-vanilla/: package.json
react/my-app/: README.md  package-lock.json  package.json
run-clang-format/: .gitignore  format-google.py  format-llvm.py  run-clang-format.pyproj  run-clang-format.sln  run_clang_format.py
rust/guessing_game/: Cargo.toml  README.md
rust/rust-by-example/: Cargo.toml  README.md
rust/rust_application1/: rust_application1.rsproj  rust_application1.sln
rust/sandbox/: README.md
scripts/: kill-chrome.bat  open_all_clang_format.bat  open_all_vscode_settings.bat
scripts/format/: cpp_sandbox_format.py  format-chromium.py
swig/: test_swig.cpp
ts/: constructor_interface.ts
ts/express_1/: app.js  package.json
ts/helloworld/: .gitignore
ts/node-old/: README.md  package-lock.json  package.json  tsconfig.json
ts/node1/: .gitignore  package-lock.json  package.json  tsconfig.json
ts/sandbox/: tsconfig.json
ts/test-node/: .gitattributes  README.md  package.json
ts/test-node-almost-empty/: package.json
ts/test-node-npm/: .gitattributes  .gitignore  README.md  package.json  tsconfig.json
ts/test-node-yarn/: README.md  package.json  tsconfig.json
typescript/my-express-app/: package-lock.json  package.json
typescript/sandbox/: README.md
typescript/test-node/: README.md  package-lock.json  tsconfig.json
typescript/test-node-almost-empty/: package-lock.json
zig/hello-world/: README.md  build.zig
(+105 files in other folders)
